examples/test/testpolicy3300.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3300
  namespace: namespace288
spec:
  podSelector:
    matchLabels:
      key22: value39
      key26: value19
      key20: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value37
      podSelector:
        matchLabels:
          key47: value20
          key3: value32
          key48: value21
